--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "aframe-aterrain-component",
   "version": "1.2.0",
   "description": "A 3d geographic map component for AFrame that uses Cesium data.",
-  "unused_main": "dist/aframe-terrain-component.js",
-  "unused_unpkg": "dist/aframe-aterrain-component.min.js",
+  "main": "dist/aframe-terrain-component.js",
   "scripts": {
     "unused_dev": "budo src/all.js:dist/aframe-aterrain-component.min.js --port 7000 --live --open",
     "unused_rollup": "rollup src/all.js --output.format umd --name 'aframe-aterrain-component' --output.file dist/aframe-aterrain-component.js",
